[package]
name = "codasai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
git2 = "0.13.25"
anyhow = "1.0.51"
walkdir = "2.3.2"
ignore = "0.4.18"
log = "0.4.14"
env_logger = "0.9.0"
syntect = "4.6.0"
once_cell = "1.8.0"
pulldown-cmark = "0.8.0"
tera = "1.15.0"
ammonia = "3.1.2"
serde = { version = "1.0.130", features = ["derive"] }
sass-rs = "0.2.2"
include_dir = "0.7.2"
toml = "0.5.8"
server = { path = "packages/server" }

[build-dependencies]
syntect = "4.6.0"

[workspace]
members = [
    "packages/server",
]

[profile.fast-dev]
inherits = "dev"
debug = false

[profile.fast-dev.package."*"]
opt-level = 2
